--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "parcel-project-template",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://github.com/Homrts620/goit-js-hw-10",
+  "homepage": "https://homrts620.github.io/goit-js-hw-10/",
   "scripts": {
     "start": "parcel src/*.html",
     "build": "parcel build src/*.html --public-url /goit-js-hw-10/"
