--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "buffer": "^6.0.3",
     "modern-normalize": "^1.1.0"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.0",
-    "parcel": "^2.6.0",
+    "parcel": "^2.11.0",
     "parcel-reporter-clean-dist": "^1.0.4",
     "posthtml-include": "^1.7.4"
   },
